# python-project-lvl2

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: CH_CI.yml  CitHub_CI.yml  codeql-analysis.yml  hexlet-check.yml
gendiff/: __init__.py  arg_parser.py  common_values.py  comparator.py  constants.py  evaluator.py  format_json.py  format_plain.py  format_structured.py  formatt_plain.py  formatter.py  gendiff.py  loader.py
gendiff/formaters/: __init__.py  format_json.py  format_plain.py  format_structured.py  format_stylish.py  formater.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  main.py
gendiff/tests/: test_comparator.py  test_format_plain.py  test_gendiff.py  test_loader.py
gendiff/tests/fixtures/: txt.json  txt.yaml
tests/: conftest.py  test_comparator.py  test_format_plain.py  test_format_structured.py  test_formater.py  test_generate_diff.py  test_loader.py  tests_results.txt  tst.py
tests/fixtures/: complex01.json  complex02.json  result_complex_json.txt  result_complex_plain.txt  result_complex_structured.txt  result_simple_json.txt  result_simple_plain.txt  result_simple_structured.txt
tests/fixtures/complex/: after.json  before.json  result_json.txt  result_plain.txt  result_structured.txt  result_stylish.txt
tests/fixtures/simple/: after.yaml  before.yaml  result_json.txt  result_plain.txt  result_structured.txt  result_stylish.txt
