[tool.poetry]
name = "hexlet_code"
version = "0.3.1"
description = "Generate diff"
license = "MIT"
authors = ["AABur <aabur@mail.ru>"]
readme = "README.md"
repository = "https://github.com/AABur/python-project-lvl2"
packages = [
    { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.main:main"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
pyformat = "^0.7"
pytest-cov = "^2.10.1"
pytest = "^6.1.1"
coverage = "^5.3"
rope = "^0.18.0"
